--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,7 @@ body {
 } */
 
 body {
+  font-family: 'Inter', sans-serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
